<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/RegisterText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/usernameText2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/username"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/majorText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textGetUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/insert_username"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/usernameText2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/majorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/major"
        app:layout_constraintBottom_toTopOf="@+id/editTextMajor"
        app:layout_constraintStart_toStartOf="@+id/editTextMajor" />

    <EditText
        android:id="@+id/editTextMajor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@+id/SeniorityText"
        app:layout_constraintTop_toBottomOf="@+id/textGetUsername" />

    <TextView
        android:id="@+id/SeniorityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/seniority_level"
        app:layout_constraintBottom_toTopOf="@+id/spinnerSeniority"
        app:layout_constraintStart_toStartOf="@+id/spinnerSeniority" />

    <Spinner
        android:id="@+id/spinnerSeniority"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:entries="@array/SeniorityLevels"
        app:layout_constraintStart_toStartOf="@+id/emailText"
        app:layout_constraintTop_toBottomOf="@+id/editTextMajor" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/e_mail"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@+id/RegisterButton"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSeniority" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

</android.support.constraint.ConstraintLayout>
